--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,4 @@ POSTGRES_USER='postgres'
 POSTGRES_DB='cs3219'
 POSTGRES_PASSWORD='postgres'
 POSTGRES_PORT=5432
+MONGO_URL='mongodb+srv://yeeming:sushiMilk@cluster0.j1a3k0n.mongodb.net/questions?retryWrites=true&w=majority'
