--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 JWT_SECRET = cs3219jwt
-POSTGRES_HOST='localhost' # if not using docker
-# POSTGRES_HOST='postgres' # if using docker
+# POSTGRES_HOST='localhost' # if not using docker
+POSTGRES_HOST='postgres' # if using docker
 POSTGRES_USER='postgres'
 POSTGRES_DB='cs3219'
 POSTGRES_PASSWORD='postgres'
