--- a/.gitignore
+++ b/.gitignore
@@ -14,11 +14,12 @@
 
 # misc
 .DS_Store
-# /backend/.env
+/backend/.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
