--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.7",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ws": "^8.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
