--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/backend/node_modules
-/frontend/node_modules
+/assignment-backend/node_modules
+/assignment-frontend/node_modules
 /.pnp
 .pnp.js
 
@@ -14,7 +14,7 @@
 
 # misc
 .DS_Store
-/backend/.env
+/assignment-backend/.env
 .env.local
 .env.development.local
 .env.test.local
