--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /frontend/node_modules
 /user-service/node_modules
 /question-service/node_modules
+/matchmaking-service/node_modules
 /.pnp
 .pnp.js
 
