--- a/chat-service/package.json
+++ b/chat-service/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index"
+    "start": "nodemon index"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "firebase": "^10.4.0"
+    "dotenv": "^16.3.1",
+    "firebase": "^10.4.0",
+    "nodemon": "^3.0.1"
   }
 }
