--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /user-service/node_modules
 /question-service/node_modules
 /collaboration-service/node_modules
+/matchmaking-service/node_modules
 
 /.pnp
 .pnp.js
