Session Controller service for update of user button states among session users, and real time collaborative editor service.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /user-service/node_modules
 /question-service/node_modules
 /collaboration-service/node_modules
+/editor-service/node_modules
 
 /.pnp
 .pnp.js
