--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "next": "latest",
     "react": "latest",
+    "react-ace": "^10.1.0",
     "react-dom": "latest",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/node": "latest",
