--- a/collaboration-service/package.json
+++ b/collaboration-service/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "pg": "^8.11.3",
     "ws": "^8.14.2"
   }
