--- a/chat-service/package.json
+++ b/chat-service/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "firebase": "^10.4.0",
     "nodemon": "^3.0.1"
   }
