--- a/chat-service/package.json
+++ b/chat-service/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "firebase": "^10.4.0",
     "nodemon": "^3.0.1"
   }
