--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 /question-service/node_modules
 /collaboration-service/node_modules
 /matchmaking-service/node_modules
+/history-service/node_modules
 
 /.pnp
 .pnp.js
