--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /collaboration-service/node_modules
 /editor-service/node_modules
 /matchmaking-service/node_modules
+/eval-service/node_modules
 
 /.pnp
 .pnp.js
