--- a/chat-service/package.json
+++ b/chat-service/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase": "^10.4.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1"
   }
 }
