--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.1.13",
+    "@react-stately/data": "^3.10.3",
+    "framer-motion": "^10.16.4",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
+    "@types/color": "^3.0.4",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
