--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.5.1",
+    "cheerio": "^1.0.0-rc.12",
     "next": "latest",
     "react": "latest",
     "react-ace": "^10.1.0",
     "react-dom": "latest",
+    "react-modal": "^3.16.1",
     "react-toastify": "^9.1.3",
     "socket.io-client": "^4.7.2"
   },
