--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on:
@@ -16,14 +13,52 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x, 16.x, 18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
+
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
+
+    - name: Install dependencies
+      run: npm ci
+      working-directory: cd frontend   # Change this to the actual path of your frontend
+
+    - name: Start microservices
+      run: |
+        docker-compose up -d 
+
+        cd ../collaboration-service
+        npm install
+        npm start &
+        
+        cd ../matchmaking-service
+        npm install
+        npm start &
+        
+        cd ../question-service
+        npm install
+        npm start &
+        
+        cd ../user-service
+        npm install
+        npm start &
+      shell: bash
+
+    - name: Wait for microservices to start
+      run: sleep 10   # Adjust the sleep duration as needed, to ensure all the microservices are booted up
+
+    - name: Build and test the frontend
+      run: npm run build
+      working-directory: cd ../frontend
+
+    - name: Stop microservices
+      run: |
+        pkill -f "node collaboration-service"
+        pkill -f "node matchmaking-service"
+        pkill -f "node question-service"
+        pkill -f "node user-service"
+      shell: bash
