--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,42 +23,42 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
 
-    - name: Install dependencies
-      run: npm ci
-      working-directory: cd frontend   # Change this to the actual path of your frontend
+    # - name: Install dependencies
+    #   run: npm ci
+    #   working-directory: cd frontend   # Change this to the actual path of your frontend
 
-    - name: Start microservices
-      run: |
-        docker-compose up -d 
+    # - name: Start microservices
+    #   run: |
+    #     docker-compose up -d 
 
-        cd ../collaboration-service
-        npm install
-        npm start &
+    #     cd ../collaboration-service
+    #     npm install
+    #     npm start &
         
-        cd ../matchmaking-service
-        npm install
-        npm start &
+    #     cd ../matchmaking-service
+    #     npm install
+    #     npm start &
         
-        cd ../question-service
-        npm install
-        npm start &
+    #     cd ../question-service
+    #     npm install
+    #     npm start &
         
-        cd ../user-service
-        npm install
-        npm start &
-      shell: bash
+    #     cd ../user-service
+    #     npm install
+    #     npm start &
+    #   shell: bash
 
-    - name: Wait for microservices to start
-      run: sleep 10   # Adjust the sleep duration as needed, to ensure all the microservices are booted up
+    # - name: Wait for microservices to start
+    #   run: sleep 10   # Adjust the sleep duration as needed, to ensure all the microservices are booted up
 
-    - name: Build and test the frontend
-      run: npm run build
-      working-directory: cd ../frontend
+    # - name: Build and test the frontend
+    #   run: npm run build
+    #   working-directory: cd ../frontend
 
-    - name: Stop microservices
-      run: |
-        pkill -f "node collaboration-service"
-        pkill -f "node matchmaking-service"
-        pkill -f "node question-service"
-        pkill -f "node user-service"
-      shell: bash
+    # - name: Stop microservices
+    #   run: |
+    #     pkill -f "node collaboration-service"
+    #     pkill -f "node matchmaking-service"
+    #     pkill -f "node question-service"
+    #     pkill -f "node user-service"
+    #   shell: bash
