--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,14 +23,13 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
 
-    # - name: Install dependencies
-    #   run: npm ci
-    #   working-directory: cd frontend   # Change this to the actual path of your frontend
+    - name: Install dependencies
+      run: npm ci
+      working-directory: cd ./frontend   # Change this to the actual path of your frontend
 
     # - name: Start microservices
     #   run: |
     #     docker-compose up -d 
-
     #     cd ../collaboration-service
     #     npm install
     #     npm start &
@@ -51,14 +50,14 @@ jobs:
     # - name: Wait for microservices to start
     #   run: sleep 10   # Adjust the sleep duration as needed, to ensure all the microservices are booted up
 
-    # - name: Build and test the frontend
-    #   run: npm run build
-    #   working-directory: cd ../frontend
+    - name: Build and test the frontend
+      run: npm run build --if-present
+      working-directory: cd ../frontend
 
-    # - name: Stop microservices
-    #   run: |
-    #     pkill -f "node collaboration-service"
-    #     pkill -f "node matchmaking-service"
-    #     pkill -f "node question-service"
-    #     pkill -f "node user-service"
-    #   shell: bash
+    - name: Stop microservices
+      run: |
+        pkill -f "node collaboration-service"
+        pkill -f "node matchmaking-service"
+        pkill -f "node question-service"
+        pkill -f "node user-service"
+      shell: bash
