--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,11 +17,12 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Setup Node.js environment ${{ matrix.node-version }}
-      uses: actions/setup-node@v4.0.0
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+    # - name: Setup Node.js environment ${{ matrix.node-version }}
+    #   uses: actions/setup-node@v4.0.0
+    #   with:
+    #     node-version: ${{ matrix.node-version }}
+    #     cache: 'npm'
+    #   working-directory: frontend
 
     - name: Install dependencies
       working-directory: cd ./frontend   # Change this to the actual path of your frontend
