--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,28 +28,28 @@ jobs:
       working-directory: frontend   # Change this to the actual path of your frontend
       run: npm ci
 
-    # - name: Start microservices
-    #   run: |
-    #     docker-compose up -d 
-    #     cd ../collaboration-service
-    #     npm install
-    #     npm start &
+    - name: Start microservices
+      run: |
+        docker-compose up -d 
+        cd ../collaboration-service
+        npm install
+        npm start &
         
-    #     cd ../matchmaking-service
-    #     npm install
-    #     npm start &
+        cd ../matchmaking-service
+        npm install
+        npm start &
         
-    #     cd ../question-service
-    #     npm install
-    #     npm start &
+        cd ../question-service
+        npm install
+        npm start &
         
-    #     cd ../user-service
-    #     npm install
-    #     npm start &
-    #   shell: bash
+        cd ../user-service
+        npm install
+        npm start &
+      shell: bash
 
-    # - name: Wait for microservices to start
-    #   run: sleep 10   # Adjust the sleep duration as needed, to ensure all the microservices are booted up
+    - name: Wait for microservices to start
+      run: sleep 10   # Adjust the sleep duration as needed, to ensure all the microservices are booted up
 
     - name: Build and test the frontend
       run: npm run build --if-present
