--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/assignment-backend/node_modules
-/assignment-frontend/node_modules
-/frontend/node_modules
-/user-service/node_modules
-/question-service/node_modules
-/collaboration-service/node_modules
-/matchmaking-service/node_modules
-/history-service/node_modules
+*/node_modules
 
 /.pnp
 .pnp.js
