Add history service build check

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,6 +63,10 @@ jobs:
         npm install
         npm start &
 
+        cd ../history-service
+        npm install
+        npm start &
+
       shell: bash
 
     - name: Build frontend
