--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,10 @@
 /assignment-backend/.env
 .env.local
 .env.development.local
+.env.development
 .env.test.local
 .env.production.local
+.env.production
 .env
 
 npm-debug.log*
