--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -1,20 +1,20 @@
-# Define the image you want to build from.
+# Define the base image you want to build from.
 # In this case, we are using the latest LTS (long term support) version of Node.
-FROM node:18-alpine
+FROM node:18-buster as build
 
 # Create app directory to hold application code inside the image.
-WORKDIR /usr/src/user-service
+WORKDIR /app
 
-# The image comes with Node.js and NPM already installed.
-# We just need to install the rest of our dependencies.
 # Copy package.json and package-lock.json to the app directory on the image.
-COPY package*.json ./
+COPY . ./
 
 # Install dependencies.
 RUN npm install
 
+FROM node:18-alpine as main
+
 # Bundle the app's source code inside the Docker image.
-COPY . .
+COPY --from=build /app /
 
 # Expose port 8000 so it can be mapped by Docker daemon.
 EXPOSE 8000
