--- a/eval-service/k8/templates/deployment.yaml
+++ b/eval-service/k8/templates/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: eval-service-container
-          image: gcr.io/moonlit-order-400013/eval-service-image
+          image: imrajsingh/eval-service-image
           ports:
             - containerPort: 7000
