--- a/history-service/k8/templates/deployment.yaml
+++ b/history-service/k8/templates/deployment.yaml
@@ -14,6 +14,11 @@ spec:
     spec:
       containers:
         - name: history-service-container
-          image: gcr.io/moonlit-order-400013/history-service-image
+          image: imrajsingh/history-service-image
           ports:
             - containerPort: 8006
+          env:
+            - name: MONGO_URL
+              value: "{{ .Values.secrets.mongo_url }}"
+            - name: JWT_SECRET
+              value: "{{ .Values.secrets.jwt_secret }}"
