--- a/collaboration-service/k8/templates/deployment.yaml
+++ b/collaboration-service/k8/templates/deployment.yaml
@@ -14,6 +14,11 @@ spec:
     spec:
       containers:
         - name: collaboration-service-container
-          image: gcr.io/moonlit-order-400013/collaboration-service-image
+          image: imrajsingh/collaboration-service-image
           ports:
             - containerPort: 8004
+          env:
+            - name: "NODE_ENV"
+              value: "production"
+            - name: "KAFKA_HOST"
+              value: "kafka.default.svc.cluster.local:9092"
