frontend deployment, and changing of urls to dynamically use prod url or dev ursl

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,20 +1,22 @@
 # Define the image you want to build from.
-FROM node:18-alpine
+FROM node:18-alpine as build
 
 # Create app directory to hold application code inside the image.
-WORKDIR /usr/src/frontend-service
+WORKDIR /app
 
 # Copy package.json and package-lock.json to the app directory on the image.
-COPY package*.json ./
+COPY . ./
 
 # Install dependencies.
 RUN npm install
 
+FROM node:18-alpine as main
+
 # Bundle the app's source code inside the Docker image.
-COPY . .
+COPY --from=build /app /
 
 # Expose port 3000
 EXPOSE 3000 
 
 # Build and Run the app
-CMD npm run build && npm run start
+CMD ["npm", "run", "build"]
