--- a/frontend/k8/templates/deployment.yaml
+++ b/frontend/k8/templates/deployment.yaml
@@ -36,3 +36,10 @@ spec:
               value: "{{ .Values.secrets.user_service_url }}"
             - name: NODE_ENV
               value: "production"
+          resources:
+            requests:
+              cpu: "1500m"
+              memory: "4Gi"
+            limits:
+              cpu: "2500m"
+              memory: "6Gi"
