--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,14 +16,22 @@
     "dompurify": "^3.0.6",
     "firebase": "^10.5.0",
     "framer-motion": "^10.16.4",
+    "html-react-parser": "^5.0.6",
+    "katex": "^0.16.9",
     "next": "latest",
     "react": "latest",
     "react-ace": "^10.1.0",
     "react-dom": "latest",
     "react-firebase-hooks": "^5.1.1",
+    "react-markdown": "^9.0.0",
     "react-modal": "^3.16.1",
     "react-toastify": "^9.1.3",
-    "socket.io-client": "^4.7.2"
+    "rehype-katex": "^7.0.0",
+    "rehype-prism-plus": "^1.6.3",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
+    "socket.io-client": "^4.7.2",
+    "turndown": "^7.1.2"
   },
   "devDependencies": {
     "@types/color": "^3.0.4",
