--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,18 +5,21 @@ FROM node:18-alpine as build
 WORKDIR /app
 
 # Copy package.json and package-lock.json to the app directory on the image.
-COPY . ./
+COPY package*.json ./
 
 # Install dependencies.
 RUN npm install
 
+COPY . .
+
+RUN npm run build
+
 FROM node:18-alpine as main
 
-# Bundle the app's source code inside the Docker image.
-COPY --from=build /app /
+COPY --from=build /app ./
 
 # Expose port 3000
 EXPOSE 3000 
 
-# Build and Run the app
-CMD ["npm", "run", "dev"]
+# Run the app
+CMD ["npm", "start"]
