--- a/matchmaking-service/k8/deployment/kafka-values.yaml
+++ b/matchmaking-service/k8/deployment/kafka-values.yaml
@@ -1,18 +1,17 @@
 kafka:
-  replicas: 1
   image:
     repository: wurstmeister/kafka
     tag: 2.11-1.1.1
   containerPort: 9092
   zookeeperConnect: zookeeper-service.default.svc.cluster.local:2181
   # autoCreateTopics: false
-  # deleteTopicEnable: true
-  # kraft:
-  #   enabled: false 
-  # createTopics:
-  #   - name: topic-test
-  #     partitions: 1
-  #     replicationFactor: 1
+  deleteTopicEnable: true
+  kraft:
+    enabled: false 
+  createTopics:
+    - name: session-information
+      partitions: 1
+      replicationFactor: 1
   configurationOverrides:
     - name: KAFKA_ADVERTISED_HOST_NAME
       value: kafka-service
@@ -22,16 +21,16 @@ kafka:
       value: 'true'
     - name: NODE_ENV
       value: "production"
-    # - name: 'KAFKA_ZOOKEEPER_CONNECT'
-    #   value: "zookeeper.default.svc.cluster.local:2181"
 
-persistence:
+
+  persistence:
   enabled: true
   accessMode: ReadWriteOnce
   size: 1Gi
 
-service:
+  service:
   enabled: true
   type: ClusterIP
   port: 9092
+
 
