--- a/frontend/k8/templates/deployment.yaml
+++ b/frontend/k8/templates/deployment.yaml
@@ -38,8 +38,8 @@ spec:
               value: "production"
           resources:
             requests:
-              cpu: "1500m"
+              cpu: "2"
               memory: "4Gi"
             limits:
-              cpu: "2500m"
-              memory: "6Gi"
+              cpu: "2"
+              memory: "8Gi"
