update dockerfile with new node environment
some format changes to kafka values file

--- a/matchmaking-service/Dockerfile
+++ b/matchmaking-service/Dockerfile
@@ -1,6 +1,6 @@
 # Define the base image you want to build from.
 # In this case, we are using the latest LTS (long term support) version of Node.
-FROM node:19-buster as build
+FROM node:20-alpine as build
 
 # Create app directory to hold application code inside the image.
 WORKDIR /app
@@ -11,7 +11,7 @@ COPY . ./
 # Install dependencies.
 RUN npm install
 
-FROM node:19-alpine as main
+FROM node:20-alpine as main
 
 # Bundle the app's source code inside the Docker image.
 COPY --from=build /app /
