--- a/history-service/Dockerfile
+++ b/history-service/Dockerfile
@@ -1,6 +1,6 @@
 # Define the image you want to build from.
 # In this case, we are using the latest LTS (long term support) version of Node.
-FROM node:18-buster as build
+FROM node:20-alpine as build
 
 # Create app directory to hold application code inside the image.
 WORKDIR /app
@@ -13,7 +13,7 @@ COPY . ./
 # Install dependencies.
 RUN npm install
 
-FROM node:18-alpine as main
+FROM node:20-alpine as main
 
 COPY --from=build /app /
 
