--- a/history-service/package.json
+++ b/history-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "user-service",
+  "name": "history-service",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,19 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.10.3",
-    "async-mutex": "^0.4.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "kafkajs": "^2.2.4",
     "mongoose": "^7.6.3",
-    "node-rdkafka": "^2.17.0",
     "pg": "^8.11.3",
     "socket.io": "^4.7.2",
-    "stomp": "^0.1.1",
-    "stompjs": "^2.3.3",
     "ws": "^8.14.2"
   }
 }
