--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@
 .env.production.local
 .env.production
 .env
-user-service-values.yaml
+user-service/k8/user-service-values.yaml
 
 npm-debug.log*
 yarn-debug.log*
