change psql pwd

--- a/user-service/k8/user-service-values.yaml
+++ b/user-service/k8/user-service-values.yaml
@@ -1,6 +1,6 @@
 secrets:
   postgres_user: "postgres"
-  postgres_password: "password"
+  postgres_password: "NGz_@@9#N6j?=}gj"
   postgres_host: "35.226.223.61"
   postgres_port: "5432"
   postgres_db: "cs3219"
