--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,10 +1,11 @@
 name: CD Pipeline
+
 on:
   push:
     branches:
       - master
       - deployment
-      
+    
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -13,26 +14,24 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
           cache: 'npm'
 
-      - name: Generate deployment package
-        run: zip -r frontend.zip frontend
-
       - name: Get Node.js version
-        run: echo "VERSION=$(node -p 'require("./package.json").version')" >> "$GITHUB_ENV"
+        run: |
+          echo "VERSION=$(node -p 'require(\"./package.json\").version')" >> "$GITHUB_ENV"
 
-     - name: Deploy Frontend
+      - name: Deploy Frontend
         uses: google-github-actions/deploy-app-engine@v0
         with:
           project_id: moonlit-order-400013
           version: ${{ github.run_number }} 
           config: 'service.yaml' # Specify your App Engine configuration file
           source: './frontend' # Path to your deployment package
+
 
 
 
