--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,13 +24,18 @@ jobs:
         run: |
           echo "VERSION=$(node -p 'require(\"./package.json\").version')" >> "$GITHUB_ENV"
 
+      - name: Generate deployment package
+        run: |
+          zip -r frontend.zip frontend
+
       - name: Deploy Frontend
-        uses: google-github-actions/deploy-app-engine@v1
+        uses: google-github-actions/deploy-appengine@v1
         with:
+          credentials: ${{ secrets.YOUR_GCP_CREDENTIALS_SECRET }}
           project_id: moonlit-order-400013
           version: ${{ github.run_number }} 
           config: 'service.yaml' # Specify your App Engine configuration file
-          source: './frontend' # Path to your deployment package
+          source: './frontend.zip' # Path to your deployment package
 
 
 
