--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -45,8 +45,8 @@ jobs:
       uses: 'google-github-actions/auth@v0'
       with:
         token_format: 'access_token'
-        workload_identity_provider: 'projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
-        service_account: 'my-service-account@my-project.iam.gserviceaccount.com'
+        workload_identity_provider: 'projects/660356048486/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
+        service_account: 'linyuanxun9834@gmail.com'
 
     # Alternative option - authentication via credentials json
     # - id: 'auth'
