--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -84,7 +84,7 @@ jobs:
         chmod u+x ./kustomize
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
-      run: |-
+      run: |
       microservices=("chat-service" "collaboration-service" "editor-service" "matchmaking-service" "history-service" "question-service" "user-service" "frontend")
       for service in "${microservices[@]}"
       do
@@ -95,3 +95,4 @@ jobs:
         kubectl rollout status deployment/$service
         kubectl get services -o wide
       done
+    shell: bash
