--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -88,6 +88,7 @@ jobs:
         microservices=("chat-service" "collaboration-service" "editor-service" "matchmaking-service" "history-service" "question-service" "user-service" "frontend")
         for service in "${microservices[@]}"
         do
+          echo "Building image for $service"
           docker build -t "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service:$GITHUB_SHA" $service/
           docker push "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service:$GITHUB_SHA"  
           ./kustomize edit set image "us-central1-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service=$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service:$GITHUB_SHA" --path "./overlays/$service"
