--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -66,32 +66,32 @@ jobs:
         location: ${{ env.GKE_ZONE }}
 
     # Build the Docker image
-    - name: Build
-      run: |-
-        docker build \
-          --tag "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA" \
-          --build-arg GITHUB_SHA="$GITHUB_SHA" \
-          --build-arg GITHUB_REF="$GITHUB_REF" \
-          .
-    # Push the Docker image to Google Artifact Registry
-    - name: Publish
-      run: |-
-        docker push "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA"
-    # Set up kustomize
-    - name: Set up Kustomize
-      run: |-
-        curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
-        chmod u+x ./kustomize
-    # Deploy the Docker image to the GKE cluster
-    - name: Deploy
+    - name: Build and Push Docker Images
       run: |
         microservices=("chat-service" "collaboration-service" "editor-service" "matchmaking-service" "history-service" "question-service" "user-service" "frontend")
         for service in "${microservices[@]}"
         do
           echo "Building image for $service"
           docker build -t "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service:$GITHUB_SHA" $service/
+          echo "Pushing image for $service"
           docker push "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service:$GITHUB_SHA"  
-          ./kustomize edit set image "us-central1-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service=$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service:$GITHUB_SHA" --path "./overlays/$service"
+        done
+      shell: bash
+
+    # Set up kustomize
+    - name: Set up Kustomize
+      run: |-
+        curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
+        chmod u+x ./kustomize
+        
+    # Deploy the Docker image to the GKE cluster
+    - name: Deploy
+      run: |
+        microservices=("chat-service" "collaboration-service" "editor-service" "matchmaking-service" "history-service" "question-service" "user-service" "frontend")
+        for service in "${microservices[@]}"
+        do
+          echo "Deploying $service"
+          ./kustomize edit set image "$service=$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service:$GITHUB_SHA" --path "./overlays/$service"
           ./kustomize build "./overlays/$service" | kubectl apply -f -
           kubectl rollout status deployment/$service
           kubectl get services -o wide
