--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -91,7 +91,7 @@ jobs:
         for service in "${microservices[@]}"
         do
           echo "Deploying $service"
-          ./kustomize edit set image "$service=$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service:$GITHUB_SHA" --path "./overlays/$service"
+          ./kustomize edit set image "$service=$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service:$GITHUB_SHA" 
           ./kustomize build "./overlays/$service" | kubectl apply -f -
           kubectl rollout status deployment/$service
           kubectl get services -o wide
