--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -83,7 +83,7 @@ jobs:
       run: |-
         curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
         chmod u+x ./kustomize
-        
+
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |
@@ -91,8 +91,9 @@ jobs:
         for service in "${microservices[@]}"
         do
           echo "Deploying $service"
-          ./kustomize edit set image "$service=$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service:$GITHUB_SHA" --path "./overlays/$service"
-          ./kustomize build "./overlays/$service" | kubectl apply -f -
+          helm upgrade --install $service ./$service/k8 \
+            --set image.repository="$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service" \
+            --set image.tag="$GITHUB_SHA" \
           kubectl rollout status deployment/$service
           kubectl get services -o wide
         done
