--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -46,7 +46,7 @@ jobs:
       with:
         token_format: 'access_token'
         workload_identity_provider: 'projects/660356048486/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
-        service_account: 'my-service-account@moonlit-order-400013.iam.gserviceaccount.com'
+        service_account: 'my-k8s-service-account@moonlit-order-400013.iam.gserviceaccount.com'
         project_id: 'moonlit-order-400013'
 
     # Alternative option - authentication via credentials json
@@ -78,11 +78,11 @@ jobs:
         done
       shell: bash
 
-    # Set up kustomize
-    - name: Set up Kustomize
-      run: |-
-        curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
-        chmod u+x ./kustomize
+    # # Set up kustomize
+    # - name: Set up Kustomize
+    #   run: |-
+    #     curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
+    #     chmod u+x ./kustomize
 
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
