--- a/editor-service/k8/templates/deployment.yaml
+++ b/editor-service/k8/templates/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: editor-service-container
-          image: imrajsingh/editor-service-image
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           ports:
             - containerPort: 4000
