--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -85,9 +85,10 @@ jobs:
     #     chmod u+x ./kustomize
 
     # Deploy the Docker image to the GKE cluster
+    # eval-service has issues
     - name: Deploy
       run: |
-        microservices=("collaboration-service" "editor-service" "history-service" "question-service" "eval-service")
+        microservices=("collaboration-service" "editor-service" "history-service" "question-service")
         for service in "${microservices[@]}"
         do
           echo "Deploying $service"
