--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -13,8 +13,8 @@
 name: Build and Deploy to GKE
 
 on:
-  pull_request:
-    branches: [ "master" ]
+  push:
+    branches: [ "deployment" ]
 
 env:
   PROJECT_ID: moonlit-order-400013
@@ -66,17 +66,17 @@ jobs:
         location: ${{ env.GKE_ZONE }}
 
     # Build the Docker image
-    - name: Build and Push Docker Images
-      run: |
-        microservices=("chat-service" "collaboration-service" "editor-service" "matchmaking-service" "history-service" "question-service" "eval-service" "frontend")
-        for service in "${microservices[@]}"
-        do
-          echo "Building image for $service"
-          docker build -t "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service:$GITHUB_SHA" $service/
-          echo "Pushing image for $service"
-          docker push "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service:$GITHUB_SHA"  
-        done
-      shell: bash
+    # - name: Build and Push Docker Images
+    #   run: |
+    #     microservices=("chat-service" "collaboration-service" "editor-service" "matchmaking-service" "history-service" "question-service" "eval-service" "frontend")
+    #     for service in "${microservices[@]}"
+    #     do
+    #       echo "Building image for $service"
+    #       docker build -t "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service:$GITHUB_SHA" $service/
+    #       echo "Pushing image for $service"
+    #       docker push "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service:$GITHUB_SHA"  
+    #     done
+    #   shell: bash
 
     # # Set up kustomize
     # - name: Set up Kustomize
@@ -86,9 +86,10 @@ jobs:
 
     # Deploy the Docker image to the GKE cluster
     # eval-service has issues
+    # "collaboration-service" "editor-service" "history-service" "question-service" 
     - name: Deploy
       run: |
-        microservices=("collaboration-service" "editor-service" "history-service" "question-service" "eval-service")
+        microservices=("eval-service")
         for service in "${microservices[@]}"
         do
           echo "Deploying $service"
@@ -103,14 +104,14 @@ jobs:
           # List the services
           kubectl get services -o wide
         done
-        echo "Deploying frontend-service"
-        helm upgrade --install frontend ./frontend/k8 \
-          --set image.repository="$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/frontend" \
-          --set image.tag="$GITHUB_SHA" \
-          --values ./frontend/k8/frontend-values.yaml \
-          --wait
-        kubectl rollout status deployment/frontend-service-deployment
-        kubectl get services -o wide
+        # echo "Deploying frontend-service"
+        # helm upgrade --install frontend ./frontend/k8 \
+        #   --set image.repository="$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/frontend" \
+        #   --set image.tag="$GITHUB_SHA" \
+        #   --values ./frontend/k8/frontend-values.yaml \
+        #   --wait
+        # kubectl rollout status deployment/frontend-service-deployment
+        # kubectl get services -o wide
       shell: bash
 
 # ./kustomize edit set image "$service=$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service:$GITHUB_SHA" 
